language/move-lang/tests/move_check/typing/binary_or_invalid.exp
error[E04007]: incompatible types
  ┌─ tests/move_check/typing/binary_or_invalid.move:8:9
  │
8 │         0 || 1;
  │         ^ -- Expected: 'bool'
  │         │  
  │         Invalid argument to '||'
  │         Given: integer

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/binary_or_invalid.move:8:14
  │
8 │         0 || 1;
  │           -- ^
  │           │  │
  │           │  Invalid argument to '||'
  │           │  Given: integer
  │           Expected: 'bool'

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/binary_or_invalid.move:9:9
  │
9 │         1 || false;
  │         ^ -- Expected: 'bool'
  │         │  
  │         Invalid argument to '||'
  │         Given: integer

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_or_invalid.move:10:18
   │
10 │         false || 1;
   │               -- ^
   │               │  │
   │               │  Invalid argument to '||'
   │               │  Given: integer
   │               Expected: 'bool'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_or_invalid.move:11:9
   │
11 │         @0x0 || @0x1;
   │         ^^^^ -- Expected: 'bool'
   │         │     
   │         Invalid argument to '||'
   │         Given: 'address'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_or_invalid.move:11:17
   │
11 │         @0x0 || @0x1;
   │              -- ^^^^
   │              │  │
   │              │  Invalid argument to '||'
   │              │  Given: 'address'
   │              Expected: 'bool'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_or_invalid.move:12:9
   │
12 │         (0: u8) || (1: u128);
   │         ^^^^^^^ -- Expected: 'bool'
   │         │   │    
   │         │   Given: 'u8'
   │         Invalid argument to '||'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_or_invalid.move:12:20
   │
12 │         (0: u8) || (1: u128);
   │                 -- ^^^^^^^^^
   │                 │  │   │
   │                 │  │   Given: 'u128'
   │                 │  Invalid argument to '||'
   │                 Expected: 'bool'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_or_invalid.move:13:9
   │
 7 │     fun t0(x: u64, r: R, s: S) {
   │                       - Given: '0x8675309::M::R'
   ·
13 │         r || r;
   │         ^ -- Expected: 'bool'
   │         │  
   │         Invalid argument to '||'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_or_invalid.move:13:14
   │
 7 │     fun t0(x: u64, r: R, s: S) {
   │                       - Given: '0x8675309::M::R'
   ·
13 │         r || r;
   │           -- ^ Invalid argument to '||'
   │           │   
   │           Expected: 'bool'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_or_invalid.move:14:9
   │
 7 │     fun t0(x: u64, r: R, s: S) {
   │                             - Given: '0x8675309::M::S'
   ·
14 │         s || s;
   │         ^ -- Expected: 'bool'
   │         │  
   │         Invalid argument to '||'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_or_invalid.move:14:14
   │
 7 │     fun t0(x: u64, r: R, s: S) {
   │                             - Given: '0x8675309::M::S'
   ·
14 │         s || s;
   │           -- ^ Invalid argument to '||'
   │           │   
   │           Expected: 'bool'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_or_invalid.move:15:9
   │
15 │         () || ();
   │         ^^ -- Expected: 'bool'
   │         │   
   │         Invalid argument to '||'
   │         Given: '()'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_or_invalid.move:15:15
   │
15 │         () || ();
   │            -- ^^
   │            │  │
   │            │  Invalid argument to '||'
   │            │  Given: '()'
   │            Expected: 'bool'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_or_invalid.move:16:17
   │
16 │         true || ();
   │              -- ^^
   │              │  │
   │              │  Invalid argument to '||'
   │              │  Given: '()'
   │              Expected: 'bool'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_or_invalid.move:17:9
   │
17 │         (true, false) || (true, false, true);
   │         ^^^^^^^^^^^^^ -- Expected: 'bool'
   │         │              
   │         Invalid argument to '||'
   │         Given: '(bool, bool)'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_or_invalid.move:17:26
   │
17 │         (true, false) || (true, false, true);
   │                       -- ^^^^^^^^^^^^^^^^^^^
   │                       │  │
   │                       │  Invalid argument to '||'
   │                       │  Given: '(bool, bool, bool)'
   │                       Expected: 'bool'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_or_invalid.move:18:9
   │
18 │         (true, true) || (false, false);
   │         ^^^^^^^^^^^^ -- Expected: 'bool'
   │         │             
   │         Invalid argument to '||'
   │         Given: '(bool, bool)'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_or_invalid.move:18:25
   │
18 │         (true, true) || (false, false);
   │                      -- ^^^^^^^^^^^^^^
   │                      │  │
   │                      │  Invalid argument to '||'
   │                      │  Given: '(bool, bool)'
   │                      Expected: 'bool'

